# StereoVisualOdometry

./: .gitignore  CMakeLists.txt  README.md
include/myslam/: camera.h  common_include.h  frame.h  localbundleadjustment.h  mappoint.h  visual_odometry.h
src/: CMakeLists.txt  camera.cpp  frame.cpp  map.cpp  mappoint.cpp  visual_odometry.cpp
test/: CMakeLists.txt  vo.cpp
